<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddBookFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/add_book_fragment" />

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/red"
            android:textStyle="italic"
            android:visibility="gone"
            />
        <EditText
            android:id="@+id/etName"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            ></EditText>
        <EditText
            android:id="@+id/etAuthor"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/author"></EditText>
        <EditText
            android:id="@+id/etPageCount"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pageCount"></EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_category"
            android:layout_marginTop="10dp"></TextView>
        <Spinner
            android:id="@+id/spCategory"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            ></Spinner>

        <Button
            android:id="@+id/btnAddBook"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/add_book" />
        <Button
            android:id="@+id/btnNextPage"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/go_to_next_page" />
    </LinearLayout>


</FrameLayout>